--- a/imgui/imgui.vcxproj
+++ b/imgui/imgui.vcxproj
@@ -17,6 +17,8 @@
     <ClInclude Include="imgui_impl_opengl3.h" />
     <ClInclude Include="imgui_impl_opengl3_loader.h" />
     <ClInclude Include="imgui_internal.h" />
+    <ClInclude Include="imgui_neo_internal.h" />
+    <ClInclude Include="imgui_neo_sequencer.h" />
     <ClInclude Include="imgui_stdlib.h" />
     <ClInclude Include="implot.h" />
     <ClInclude Include="implot_internal.h" />
@@ -30,6 +32,8 @@
     <ClCompile Include="imgui_draw.cpp" />
     <ClCompile Include="imgui_impl_glfw.cpp" />
     <ClCompile Include="imgui_impl_opengl3.cpp" />
+    <ClCompile Include="imgui_neo_internal.cpp" />
+    <ClCompile Include="imgui_neo_sequencer.cpp" />
     <ClCompile Include="imgui_stdlib.cpp" />
     <ClCompile Include="imgui_tables.cpp" />
     <ClCompile Include="imgui_widgets.cpp" />
