--- a/Ciallo/imgui.ini
+++ b/Ciallo/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Debug##Default]
-Pos=60,60
-Size=400,400
+Pos=84,838
+Size=2057,450
 Collapsed=0
 
 [Window][Dear ImGui Demo]
@@ -10,10 +10,10 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][Dear ImGui Metrics/Debugger]
-Pos=1419,0
-Size=501,974
+Pos=1469,0
+Size=1091,1476
 Collapsed=0
-DockId=0x00000018,0
+DockId=0x00000024,0
 
 [Window][DockSpace Demo]
 Size=2560,1334
@@ -22,11 +22,11 @@ Collapsed=0
 [Window][ImPlot Demo]
 Size=2000,1334
 Collapsed=0
-DockId=0x00000016,0
+DockId=0x0000001A,0
 
 [Window][DockSpaceViewport_11111111]
 Pos=0,0
-Size=1920,974
+Size=2560,1476
 Collapsed=0
 
 [Window][Canvas Panel]
@@ -41,8 +41,8 @@ Size=806,234
 Collapsed=0
 
 [Window][Toolbox]
-Pos=937,314
-Size=404,705
+Pos=734,303
+Size=1091,870
 Collapsed=0
 
 [Window][LayerManager]
@@ -93,9 +93,9 @@ Collapsed=0
 
 [Window][Canvas]
 Pos=0,0
-Size=1417,974
+Size=1467,1137
 Collapsed=0
-DockId=0x00000016,0
+DockId=0x0000001A,0
 
 [Window][Tools]
 Pos=60,60
@@ -117,6 +117,12 @@ Pos=281,60
 Size=1374,840
 Collapsed=0
 
+[Window][Timeline]
+Pos=0,1139
+Size=1467,337
+Collapsed=0
+DockId=0x0000001D,0
+
 [Table][0x306783DE,3]
 RefScale=19.5
 Column 0  Width=75
@@ -124,30 +130,42 @@ Column 1  Width=75
 Column 2  Weight=1.0000
 
 [Docking][Data]
-DockNode                          ID=0x00000001 Pos=498,465 Size=568,619 Selected=0x97178C93
-DockSpace                         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1920,974 Split=X
-  DockNode                        ID=0x00000014 Parent=0x8B93E3BD SizeRef=470,1406 Selected=0x0339283F
-  DockNode                        ID=0x00000015 Parent=0x8B93E3BD SizeRef=2088,1406 Split=X
-    DockNode                      ID=0x00000012 Parent=0x00000015 SizeRef=465,1334 Selected=0x0339283F
-    DockNode                      ID=0x00000013 Parent=0x00000015 SizeRef=2093,1334 Split=X
-      DockNode                    ID=0x00000010 Parent=0x00000013 SizeRef=426,1334 Selected=0x0339283F
-      DockNode                    ID=0x00000011 Parent=0x00000013 SizeRef=2132,1334 Split=X
-        DockNode                  ID=0x0000000E Parent=0x00000011 SizeRef=279,1334 Selected=0x0339283F
-        DockNode                  ID=0x0000000F Parent=0x00000011 SizeRef=2279,1334 Split=X
-          DockNode                ID=0x0000000C Parent=0x0000000F SizeRef=280,1334 Selected=0x0339283F
-          DockNode                ID=0x0000000D Parent=0x0000000F SizeRef=2278,1334 Split=X
-            DockNode              ID=0x0000000A Parent=0x0000000D SizeRef=404,1334 Selected=0x0339283F
-            DockNode              ID=0x0000000B Parent=0x0000000D SizeRef=2154,1334 Split=X
-              DockNode            ID=0x00000003 Parent=0x0000000B SizeRef=296,1334 Selected=0x0339283F
-              DockNode            ID=0x00000009 Parent=0x0000000B SizeRef=2262,1334 Split=X
-                DockNode          ID=0x00000007 Parent=0x00000009 SizeRef=297,1334 Selected=0x0339283F
-                DockNode          ID=0x00000008 Parent=0x00000009 SizeRef=2261,1334 Split=X
-                  DockNode        ID=0x00000004 Parent=0x00000008 SizeRef=1718,0 Split=Y Selected=0xB903C8C9
-                    DockNode      ID=0x00000002 Parent=0x00000004 SizeRef=225,402 Split=X Selected=0x429E880E
-                      DockNode    ID=0x00000016 Parent=0x00000002 SizeRef=1417,974 CentralNode=1 Selected=0x429E880E
-                      DockNode    ID=0x00000017 Parent=0x00000002 SizeRef=501,974 Split=Y Selected=0x20E3C5EA
-                        DockNode  ID=0x00000018 Parent=0x00000017 SizeRef=404,267 Selected=0x20E3C5EA
-                        DockNode  ID=0x00000019 Parent=0x00000017 SizeRef=404,705 Selected=0x0339283F
-                    DockNode      ID=0x00000006 Parent=0x00000004 SizeRef=225,406 Selected=0x0339283F
-                  DockNode        ID=0x00000005 Parent=0x00000008 SizeRef=558,1334 Selected=0xE87781F4
+DockNode                                ID=0x00000001 Pos=498,465 Size=568,619 Selected=0x97178C93
+DockSpace                               ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=2560,1476 Split=X
+  DockNode                              ID=0x00000020 Parent=0x8B93E3BD SizeRef=1091,1476 Selected=0x0339283F
+  DockNode                              ID=0x00000021 Parent=0x8B93E3BD SizeRef=1467,1476 Split=X
+    DockNode                            ID=0x00000014 Parent=0x00000021 SizeRef=470,1406 Selected=0x0339283F
+    DockNode                            ID=0x00000015 Parent=0x00000021 SizeRef=2088,1406 Split=X
+      DockNode                          ID=0x00000012 Parent=0x00000015 SizeRef=465,1334 Selected=0x0339283F
+      DockNode                          ID=0x00000013 Parent=0x00000015 SizeRef=2093,1334 Split=X
+        DockNode                        ID=0x00000010 Parent=0x00000013 SizeRef=426,1334 Selected=0x0339283F
+        DockNode                        ID=0x00000011 Parent=0x00000013 SizeRef=2132,1334 Split=X
+          DockNode                      ID=0x0000000E Parent=0x00000011 SizeRef=279,1334 Selected=0x0339283F
+          DockNode                      ID=0x0000000F Parent=0x00000011 SizeRef=2279,1334 Split=X
+            DockNode                    ID=0x0000000C Parent=0x0000000F SizeRef=280,1334 Selected=0x0339283F
+            DockNode                    ID=0x0000000D Parent=0x0000000F SizeRef=2278,1334 Split=X
+              DockNode                  ID=0x0000000A Parent=0x0000000D SizeRef=404,1334 Selected=0x0339283F
+              DockNode                  ID=0x0000000B Parent=0x0000000D SizeRef=2154,1334 Split=X
+                DockNode                ID=0x00000003 Parent=0x0000000B SizeRef=296,1334 Selected=0x0339283F
+                DockNode                ID=0x00000009 Parent=0x0000000B SizeRef=2262,1334 Split=X
+                  DockNode              ID=0x00000007 Parent=0x00000009 SizeRef=297,1334 Selected=0x0339283F
+                  DockNode              ID=0x00000008 Parent=0x00000009 SizeRef=2261,1334 Split=X
+                    DockNode            ID=0x00000004 Parent=0x00000008 SizeRef=1718,0 Split=Y Selected=0xB903C8C9
+                      DockNode          ID=0x00000002 Parent=0x00000004 SizeRef=225,402 Split=X Selected=0x429E880E
+                        DockNode        ID=0x00000016 Parent=0x00000002 SizeRef=1466,974 Split=X Selected=0x429E880E
+                          DockNode      ID=0x0000001E Parent=0x00000016 SizeRef=1467,1137 Split=Y Selected=0x429E880E
+                            DockNode    ID=0x0000001A Parent=0x0000001E SizeRef=1467,1137 CentralNode=1 Selected=0x429E880E
+                            DockNode    ID=0x0000001D Parent=0x0000001E SizeRef=1467,337 Selected=0x0F18B61B
+                          DockNode      ID=0x0000001F Parent=0x00000016 SizeRef=1091,1137 Split=Y Selected=0x0339283F
+                            DockNode    ID=0x00000022 Parent=0x0000001F SizeRef=1091,569 Selected=0x0339283F
+                            DockNode    ID=0x00000023 Parent=0x0000001F SizeRef=1091,566 Split=Y Selected=0x20E3C5EA
+                              DockNode  ID=0x00000024 Parent=0x00000023 SizeRef=1091,569 Selected=0x20E3C5EA
+                              DockNode  ID=0x00000025 Parent=0x00000023 SizeRef=1091,566 Selected=0x0339283F
+                        DockNode        ID=0x00000017 Parent=0x00000002 SizeRef=1092,974 Split=Y Selected=0x20E3C5EA
+                          DockNode      ID=0x00000018 Parent=0x00000017 SizeRef=404,267 Split=Y Selected=0x0339283F
+                            DockNode    ID=0x0000001B Parent=0x00000018 SizeRef=501,738 Selected=0x0339283F
+                            DockNode    ID=0x0000001C Parent=0x00000018 SizeRef=501,736 Selected=0x20E3C5EA
+                          DockNode      ID=0x00000019 Parent=0x00000017 SizeRef=404,705 Selected=0x0339283F
+                      DockNode          ID=0x00000006 Parent=0x00000004 SizeRef=225,406 Selected=0x0339283F
+                    DockNode            ID=0x00000005 Parent=0x00000008 SizeRef=558,1334 Selected=0xE87781F4
 
