--- a/Ciallo/Ciallo.vcxproj
+++ b/Ciallo/Ciallo.vcxproj
@@ -100,7 +100,7 @@
     <ClCompile Include="Application.cpp" />
     <ClCompile Include="ArrangementManager.cpp" />
     <ClCompile Include="ArticulatedLineEngine.cpp" />
-    <ClCompile Include="Context.cpp" />
+    <ClCompile Include="SelectionManager.cpp" />
     <ClCompile Include="CubicBezierBone.cpp" />
     <ClCompile Include="Brush.cpp" />
     <ClCompile Include="BrushManager.cpp" />
@@ -148,7 +148,7 @@
     <ClInclude Include="Arrangement.h" />
     <ClInclude Include="ArrangementManager.h" />
     <ClInclude Include="ArticulatedLineEngine.h" />
-    <ClInclude Include="Context.h" />
+    <ClInclude Include="SelectionManager.h" />
     <ClInclude Include="CubicBezierBone.h" />
     <ClInclude Include="Brush.h" />
     <ClInclude Include="BrushManager.h" />
